traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:20: error: ')' expected but '}' found.
    }
    ^